--- a/gui/platformio.ini
+++ b/gui/platformio.ini
@@ -26,7 +26,7 @@
 
 ; Default environments to load
 default_envs =
-ESP32-TFT_eSPI-ILI9341-STMPE610
+Arduino-mcufriend-XPT2046_ps
 
 [env]
 ; GUIslice compilation more straightforward in "deep" LDF mode
@@ -53,90 +53,77 @@ build_flags =
 ; ----------------------------------------------------------------------
 
 ; ---------------------------------------------------------
-; Display: bodmer/TFT_eSPI
+; Display: prenticedavid/MCUFRIEND_kbv
 ; ---------------------------------------------------------
-[disp-TFT_eSPI-ILI9341]
-lib_deps =
-	TFT_eSPI
-; if you define -DGSLC_SPIFFS_EN=1 you must include these
-; other libraries
-;  TFT_eFEX
-;  JPEGDecoder
-
-; TFT_eSPI display configuration
-; - Example from: Setup1_ILI9341-cal-esp32-feather.h
-;   Adafruit Feather ESP32 + Adafruit 2.4" Featherwing TFT
-;
-; - If using TFT_eSPI, configure to match the settings in the
-;   User Setup included within TFT_eSPI/User_Setup_Select.h
-; - You must use "-DUSER_SETUP_LOADED=1" here to disable the
-;   default config files within TFT_eSPI from being used.
-build_flags =
-	-DUSER_SETUP_LOADED=1
-	-DILI9341_DRIVER
-	-DTFT_CS=15
-	-DTFT_DC=33
-	-DTFT_RST=-1
-	-DTFT_MOSI=18
-	-DTFT_MISO=19
-	-DTFT_SCLK=5
-	-DLOAD_GLCD
-	-DLOAD_GFXFF
-	-DSMOOTH_FONT
-	-DSPI_FREQUENCY=40000000
-	-DSPI_READ_FREQUENCY=20000000
-	-DSPI_TOUCH_FREQUENCY=2500000
-	-DSUPPORT_TRANSACTIONS
-
-; ---------------------------------------------------------
-; Touch: Adafruit/Adafruit_STMPE610
-; ---------------------------------------------------------
-[touch-STMPE610]
+[disp-mcufriend]
 lib_deps =
 	Wire
-	adafruit/Adafruit STMPE610
+	adafruit/Adafruit BusIO
+	adafruit/Adafruit GFX Library
+	prenticedavid/MCUFRIEND_kbv
 build_flags =
 
 ; ---------------------------------------------------------
-; MCU: ESP32
+; Touch: PaulStoffregen/XPT2046_Touchscreen
+; ---------------------------------------------------------
+[touch-XPT2046_ps]
+lib_deps =
+	PaulStoffregen/XPT2046_Touchscreen
+build_flags =
+
+; ---------------------------------------------------------
+; MCU: "Arduino"
 ; - Includes:
-;   - Adafruit ESP32 Feather (board=featheresp32)
+;   - Atmel AVR
+;     - Arduino UNO (board=uno)
+;   - Atmel megaAVR
+;     - ATmega2560 (board=ATmega2560)
+;   - Atmel SAM
+;     - Adafruit Grand Central M4 (board=adafruit_grandcentral_m4)
+;     - Arduino Due (board=due)
+;     - Arduino Zero (board=zero
 ;   - etc.
 ; ---------------------------------------------------------
-[mcu-ESP32]
-platform = espressif32
-board = featheresp32
+[mcu-Arduino]
+platform = atmelavr
+board = ATmega2560
 framework = arduino
+; Board default is:
+; - upload_protocol = arduino
+; try custom if you get Error: Please specify `upload_port` for environment 
+;upload_port = custom
+upload_protocol = stk500v2
+upload_flags = 
+	-Pusb
 
-[env:ESP32-TFT_eSPI-ILI9341-STMPE610]
-extends = mcu-ESP32
-;monitor_port = COM5
-;monitor_speed = 115200
-;lib_extra_dirs = ~/Documents/PlatformIO/Libraries
+[env:Arduino-mcufriend-XPT2046_ps]
+extends = mcu-Arduino
 lib_deps =
-	${disp-TFT_eSPI-ILI9341.lib_deps}
-	${touch-STMPE610.lib_deps}
+	${disp-mcufriend.lib_deps}
+	${touch-XPT2046_ps.lib_deps}
 	GUIslice
 build_flags =
 	${common.build_flags}
-	${disp-TFT_eSPI-ILI9341.build_flags}
-	${touch-STMPE610.build_flags}
-	-DUSER_CONFIG_LOADED=1;
-	-DDRV_DISP_TFT_ESPI
-	-DDRV_TOUCH_ADA_STMPE610
-  -DADAGFX_PIN_SDCS=14
+	${disp-mcufriend.build_flags}
+	${touch-4wire.build_flags}
+	-DUSER_CONFIG_LOADED
+	-DDRV_DISP_ADAGFX
+	-DDRV_DISP_ADAGFX_MCUFRIEND
+;MCUFRIEND write-only displays may need to force an ID value
+	-DDRV_DISP_ADAGFX_MCUFRIEND_FORCE=0x9481
+	-DDRV_TOUCH_XPT2046_PS
+;Touch bus & pinout
+	-DXPT2046_CS=3
+;IRQ pin or 255 if no IRQ used
+	-DXPT2046_IRQ=255
+	-DADAGFX_PIN_SDCS=10
 	-DGSLC_ROTATE=1
-	-DADATOUCH_I2C_HW=0
-	-DADATOUCH_SPI_HW=1
-	-DADATOUCH_SPI_SW=0
-	-DADATOUCH_I2C_ADDR=0x41
-	-DADATOUCH_PIN_CS=13
+;	-DINIT_MSG_DISABLE	
 	-DDEBUG_ERR=1
 	-DGSLC_FEATURE_COMPOUND=0
 	-DGSLC_FEATURE_XTEXTBOX_EMBED=0
 	-DGSLC_FEATURE_INPUT=0
 	-DGSLC_SD_EN=0
-	-DGSLC_SPIFFS_EN=0
 	-DGSLC_TOUCH_MAX_EVT=1
 	-DGSLC_SD_BUFFPIXEL=50
 	-DGSLC_CLIP_EN=1
@@ -147,13 +134,26 @@ build_flags =
 	-DGSLC_USE_PROGMEM=1
 	-DGSLC_LOCAL_STR=0
 	-DGSLC_LOCAL_STR_LEN=30
-; You will need to override these values after calibration of your display
-	-DADATOUCH_X_MIN=244
-	-DADATOUCH_X_MAX=3858
-	-DADATOUCH_Y_MIN=141
-	-DADATOUCH_Y_MAX=3717
-	-DADATOUCH_REMAP_YX=0
-;	-DUSER_CONFIG_INC_FILE=1
-;	-DUSER_CONFIG_INC_FNAME=\"../configs/esp-tftespi-default-stmpe610.h\"
+; - Definition of the pinout configuration options:
+;   ADATOUCH_PIN_YP      // "Y+": Must be an analog pin
+;   ADATOUCH_PIN_XM      // "X-": Must be an analog pin
+;   ADATOUCH_PIN_YM      // "Y-": Can be a digital pin
+;   ADATOUCH_PIN_XP      // "X+": Can be a digital pin
+; NOTE: you can either use a config file or override defines but not both!
+; Provide new pinout & calibration
+	-DADATOUCH_PIN_YP = A1
+	-DADATOUCH_PIN_XM = A2
+	-DADATOUCH_PIN_YM = 7 
+	-DADATOUCH_PIN_XP = 6 
+	-DADATOUCH_X_MIN = 905
+	-DADATOUCH_X_MAX = 187
+	-DADATOUCH_Y_MIN = 950
+	-DADATOUCH_Y_MAX = 202
+;Some touch controllers may swap X & Y coords
+	-DADATOUCH_REMAP_YX=0 
+;Touch overlay resistance value - In most cases, this value can be left as-is
+	-DADATOUCH_RX=300
+;	-DUSER_CONFIG_INC_FILE
+;	-DUSER_CONFIG_INC_FNAME=\"../configs/ard-shld-mcufriend_xpt2046.h\"
 
 ; ...
