--- a/gui/platformio.ini
+++ b/gui/platformio.ini
@@ -26,7 +26,7 @@
 
 ; Default environments to load
 default_envs =
-Arduino-mcufriend-XPT2046_ps
+Arduino-mcufriend-4wire
 
 [env]
 ; GUIslice compilation more straightforward in "deep" LDF mode
@@ -64,11 +64,11 @@ lib_deps =
 build_flags =
 
 ; ---------------------------------------------------------
-; Touch: PaulStoffregen/XPT2046_Touchscreen
+; Touch: Adafruit/Adafruit_Touchscreen (4wire)
 ; ---------------------------------------------------------
-[touch-XPT2046_ps]
+[touch-4wire]
 lib_deps =
-	PaulStoffregen/XPT2046_Touchscreen
+	adafruit/Adafruit TouchScreen
 build_flags =
 
 ; ---------------------------------------------------------
@@ -96,11 +96,11 @@ upload_protocol = stk500v2
 upload_flags = 
 	-Pusb
 
-[env:Arduino-mcufriend-XPT2046_ps]
+[env:Arduino-mcufriend-4wire]
 extends = mcu-Arduino
 lib_deps =
 	${disp-mcufriend.lib_deps}
-	${touch-XPT2046_ps.lib_deps}
+	${touch-4wire.lib_deps}
 	GUIslice
 build_flags =
 	${common.build_flags}
@@ -111,11 +111,7 @@ build_flags =
 	-DDRV_DISP_ADAGFX_MCUFRIEND
 ;MCUFRIEND write-only displays may need to force an ID value
 	-DDRV_DISP_ADAGFX_MCUFRIEND_FORCE=0x9481
-	-DDRV_TOUCH_XPT2046_PS
-;Touch bus & pinout
-	-DXPT2046_CS=3
-;IRQ pin or 255 if no IRQ used
-	-DXPT2046_IRQ=255
+	-DDRV_TOUCH_ADA_SIMPLE
 	-DADAGFX_PIN_SDCS=10
 	-DGSLC_ROTATE=1
 ;	-DINIT_MSG_DISABLE	
@@ -154,6 +150,6 @@ build_flags =
 ;Touch overlay resistance value - In most cases, this value can be left as-is
 	-DADATOUCH_RX=300
 ;	-DUSER_CONFIG_INC_FILE
-;	-DUSER_CONFIG_INC_FNAME=\"../configs/ard-shld-mcufriend_xpt2046.h\"
+;	-DUSER_CONFIG_INC_FNAME=\"../configs/ard-shld-mcufriend_4wire.h\"
 
 ; ...
