--- a/platformio.ini
+++ b/platformio.ini
@@ -8,24 +8,34 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+
+[env]
+lib_ldf_mode = deep
+build_unflags = 
+
 [common]
-monitor_speed = 9600
 lib_deps = 
 	hideakitai/DebugLog@^0.6.6
 	teckel12/NewPing@^1.9.6
-	SPI
-	moononournation/GFX Library for Arduino@^1.3.1
 	Judge.Util = symlink:///Users/michaelrichter/Documents/Arduino/libraries/Judge_Util/
 	Judge.DataStore = symlink:///Users/michaelrichter/Documents/Arduino/libraries/Judge_DataStore/
 	Judge.ButtonManager = symlink:///Users/michaelrichter/Documents/Arduino/libraries/Judge_ButtonManager/
 	Judge.SerialCommander = symlink:///Users/michaelrichter/Documents/Arduino/libraries/Judge_SerialCommander/
 	Judge.Sensors = symlink:///Users/michaelrichter/Documents/Arduino/libraries/Judge_Sensors/
-lib_ldf_mode = chain+
+build_flags = 
 
-[env:nodemcu-32s]
+[esp32]
 platform = espressif32
 framework = arduino
+
+[env:nodemcu-32s-TFT_eSPI-ILI9341]
+extends = esp32
 board = nodemcu-32s
 lib_deps = 
 	${common.lib_deps}
-	impulseadventure/GUIslice@^0.17.0
+	GUIslice
+	TFT_eSPI
+	sstaub/Ticker@^4.4.0
+build_flags = 
+	${common.build_flags}
